--- a/lyx/slides.lyx
+++ b/lyx/slides.lyx
@@ -113,30 +113,20 @@ University College London
 \end_layout
 
 \begin_layout BeginFrame
-Risk and Insurance
+Housing and Mobility
 \end_layout
 
 \begin_layout Itemize
-Many papers have studied: 
-\end_layout
-
-\begin_deeper
-\begin_layout Itemize
-idiosyncratic risk and self insurance mechanisms,
+Internal migration is a key adjustment mechanism in housing and labor markets.
 \end_layout
 
 \begin_layout Itemize
-aggregate risk and its costs.
-\end_layout
-
-\end_deeper
-\begin_layout Itemize
-Little work has been done on regional risk and how to insure it.
+Housing and human capital are the biggest items on a consumer's balance
+ sheet.
 \end_layout
 
 \begin_layout Itemize
-This paper focuses on regional risk coming from house price and wage risk
- in a rich lifecycle model.
+Shocks to house price and labor productivity have large welfare implications.
 \end_layout
 
 \begin_layout Pause
@@ -169,14 +159,15 @@ Research Questions:
 \noindent
 
 \series bold
-What is the value of migration when there are regional and aggregate price
- shocks?
+How do migration, housing choices and lifecycle savings interact?
 \end_layout
 
 \begin_layout Enumerate
+\noindent
 
 \series bold
-How do migration, housing choices and lifecycle savings interact?
+What is the value of migration when there are regional and aggregate price
+ shocks?
 \end_layout
 
 \begin_layout Enumerate
@@ -738,7 +729,7 @@ at the same time, other regions experienced growth.
 \end_layout
 
 \begin_layout Itemize
-Agragrian South evolved into 
+Agrarian South evolved into 
 \begin_inset Quotes eld
 \end_inset
 
@@ -762,7 +753,7 @@ Since the 2007 crisis, declines in the FHFA house price index ranged from
 
 \end_deeper
 \begin_layout BeginFrame
-This paper
+Outline
 \end_layout
 
 \begin_layout Itemize
@@ -800,7 +791,8 @@ onslide+<2->
 
 \end_inset
 
-Use SIPP micro data to estimate the preference parameters of the model.
+Estimate the preference parameters of the model using both micro and macro
+ data.
 \end_layout
 
 \begin_layout Itemize
@@ -816,23 +808,6 @@ onslide+<2->
 
 \end_inset
 
-Estimate regional price and labor productivity models from aggregate FHFA
- and BEA data.
-\end_layout
-
-\begin_layout Itemize
-\begin_inset ERT
-status open
-
-\begin_layout Plain Layout
-
-
-\backslash
-onslide+<3->
-\end_layout
-
-\end_inset
-
 Analyse empirically how assets and housing choice interact with migration.
 \end_layout
 
@@ -844,7 +819,7 @@ status open
 
 
 \backslash
-onslide+<4->
+onslide+<2->
 \end_layout
 
 \end_inset
@@ -860,7 +835,7 @@ status open
 
 
 \backslash
-onslide+<4->
+onslide+<2->
 \end_layout
 
 \end_inset
@@ -978,7 +953,8 @@ onslide+<3->
 
 \end_inset
 
-What would happen to migration if government policy changed?
+What would happen to migration, homeownership and welfare if we abolished
+ the mortgage interest deduction (taking into account potential price changes)?
 \end_layout
 
 \begin_layout Standard
@@ -1011,6 +987,35 @@ Literature
 Related literature
 \end_layout
 
+\begin_layout Standard
+\begin_inset Note Note
+status open
+
+\begin_layout Plain Layout
+be very explicit about what you add to K&W:
+\end_layout
+
+\begin_layout Enumerate
+housing choice
+\end_layout
+
+\begin_layout Enumerate
+savings choice
+\end_layout
+
+\begin_layout Enumerate
+risk aversion
+\end_layout
+
+\begin_layout Enumerate
+persistent regional price and labor productivity shocks
+\end_layout
+
+\end_inset
+
+
+\end_layout
+
 \begin_layout Itemize
 Dynamic models of migration over lifecycle: 
 \size footnotesize
@@ -1034,7 +1039,8 @@ vspace{3mm}
 Static spatial equilibrium models of migration and local labor markets:
  
 \size footnotesize
-Notowidigdo (2011), Moretti (2011), Piyapromdee (2013)
+Notowidigdo (2011), Moretti (2011), Diamond (2012), Piyapromdee (2013),
+ Yagan (2013)
 \begin_inset ERT
 status open
 
@@ -1158,58 +1164,6 @@ Empirical Facts
 \end_layout
 
 \begin_layout BeginFrame
-Annual Migration Rates
-\end_layout
-
-\begin_layout Itemize
-Owners move less than renters.
-\end_layout
-
-\begin_layout Standard
-\begin_inset Float table
-wide false
-sideways false
-status open
-
-\begin_layout Plain Layout
-\noindent
-\align center
-\begin_inset ERT
-status open
-
-\begin_layout Plain Layout
-
-
-\backslash
-input{
-\backslash
-Dropbox/data/sipp/move_rates_edit.tex}
-\end_layout
-
-\end_inset
-
-
-\end_layout
-
-\begin_layout Plain Layout
-\begin_inset Caption
-
-\begin_layout Plain Layout
-Percent of households.
- SIPP data, average for 1997--2012, subset to 20--50 year olds.
-\end_layout
-
-\end_inset
-
-
-\end_layout
-
-\end_inset
-
-
-\end_layout
-
-\begin_layout BeginFrame
 Definition of 
 \emph on
 Region
@@ -1246,6 +1200,12 @@ Moves within a region are not counted as migration.
 \begin_layout Itemize
 70% of interstate moves are cross Division moves.
 \end_layout
+
+\begin_layout Standard
+\noindent
+\align right
+\begin_inset Branch 25min
+status open
 
 \begin_layout Standard
 \noindent
@@ -1305,6 +1265,11 @@ end{flushright}
 
 \end_layout
 
+\end_inset
+
+
+\end_layout
+
 \begin_layout Standard
 \begin_inset Note Note
 status collapsed
@@ -1329,6 +1294,143 @@ not even 50 states is enough
 \begin_layout Itemize
 there is a tradeoff between level of geographic detail and other features
  one can analyse.
+\end_layout
+
+\end_inset
+
+
+\end_layout
+
+\begin_layout BeginPlainFrame
+
+\end_layout
+
+\begin_layout Standard
+\begin_inset ERT
+status open
+
+\begin_layout Plain Layout
+
+
+\backslash
+hspace*{1pt}
+\backslash
+makebox[
+\backslash
+linewidth][c]{%
+\end_layout
+
+\end_inset
+
+
+\end_layout
+
+\begin_layout Standard
+\begin_inset Graphics
+	filename /Users/florianoswald/Dropbox/giulia/usa-maps/USAmapNOtext.pdf
+	width 110page%
+
+\end_inset
+
+
+\end_layout
+
+\begin_layout Standard
+\begin_inset ERT
+status open
+
+\begin_layout Plain Layout
+
+}
+\end_layout
+
+\end_inset
+
+
+\end_layout
+
+\begin_layout Standard
+\begin_inset Branch 90mins
+status open
+
+\begin_layout BeginPlainFrame
+
+\end_layout
+
+\begin_layout Standard
+\begin_inset Graphics
+	filename /Users/florianoswald/Dropbox/mobility/output/data/sipp/agg_reg_p.pdf
+	height 95pheight%
+
+\end_inset
+
+
+\end_layout
+
+\begin_layout BeginPlainFrame
+
+\end_layout
+
+\begin_layout Standard
+\begin_inset Graphics
+	filename /Users/florianoswald/Dropbox/mobility/output/data/sipp/agg_reg_y.pdf
+	height 95pheight%
+
+\end_inset
+
+
+\end_layout
+
+\end_inset
+
+
+\end_layout
+
+\begin_layout BeginFrame
+Annual Migration Rates
+\end_layout
+
+\begin_layout Itemize
+Owners move less than renters.
+\end_layout
+
+\begin_layout Standard
+\begin_inset Float table
+wide false
+sideways false
+status open
+
+\begin_layout Plain Layout
+\noindent
+\align center
+\begin_inset ERT
+status open
+
+\begin_layout Plain Layout
+
+
+\backslash
+input{
+\backslash
+Dropbox/data/sipp/move_rates_edit.tex}
+\end_layout
+
+\end_inset
+
+
+\end_layout
+
+\begin_layout Plain Layout
+\begin_inset Caption
+
+\begin_layout Plain Layout
+Percent of households.
+ SIPP data, average for 1997--2012, subset to 20--50 year olds.
+\end_layout
+
+\end_inset
+
+
 \end_layout
 
 \end_inset
@@ -1434,40 +1536,6 @@ CPS 2013 data on main motivation of moving, conditional on a cross Division
 \end_inset
 
 
-\begin_inset Branch 90mins
-status open
-
-\begin_layout BeginPlainFrame
-
-\end_layout
-
-\begin_layout Standard
-\begin_inset Graphics
-	filename /Users/florianoswald/Dropbox/mobility/output/data/sipp/agg_reg_p.pdf
-	height 95pheight%
-
-\end_inset
-
-
-\end_layout
-
-\begin_layout BeginPlainFrame
-
-\end_layout
-
-\begin_layout Standard
-\begin_inset Graphics
-	filename /Users/florianoswald/Dropbox/mobility/output/data/sipp/agg_reg_y.pdf
-	height 95pheight%
-
-\end_inset
-
-
-\end_layout
-
-\end_inset
-
-
 \end_layout
 
 \begin_layout BeginPlainFrame
@@ -1476,10 +1544,44 @@ status open
 
 \begin_layout Standard
 \noindent
-\align center
+\begin_inset ERT
+status open
+
+\begin_layout Plain Layout
+
+
+\backslash
+hspace*{-2pt}
+\backslash
+makebox[
+\backslash
+linewidth][c]{%
+\end_layout
+
+\end_inset
+
+
+\end_layout
+
+\begin_layout Standard
+\noindent
 \begin_inset Graphics
 	filename /Users/florianoswald/Dropbox/mobility/output/data/sipp/raw-moversD2D.pdf
 	height 100pheight%
+
+\end_inset
+
+
+\end_layout
+
+\begin_layout Standard
+\begin_inset ERT
+status open
+
+\begin_layout Plain Layout
+
+}
+\end_layout
 
 \end_inset
 
@@ -1554,16 +1656,16 @@ Summary of empirical facts
 \end_layout
 
 \begin_layout Enumerate
-55% of people move for jobs: rest is housing, family and other.
-\end_layout
-
-\begin_layout Enumerate
 1.32% of US households move across Division borders each year.
 \end_layout
 
 \begin_layout Enumerate
-Regional labor productivity and house price vary differently with aggregate
- states.
+They face different house prices and average labor productivity in each
+ region.
+\end_layout
+
+\begin_layout Enumerate
+The main reasons for moving are work, housing, and family/other.
 \end_layout
 
 \begin_layout Enumerate
@@ -1571,7 +1673,7 @@ Renters move at more than double the rate of owners.
 \end_layout
 
 \begin_layout Enumerate
-Younger people move more, with the renter--owner gap persistent at all ages.
+Younger people move more, with the renter--owner gap shrinking with age.
 \end_layout
 
 \end_inset
@@ -1614,15 +1716,59 @@ Model
 \end_layout
 
 \begin_layout BeginFrame
-Model Outline I
+Decision Process
+\end_layout
+
+\begin_layout Standard
+In each period, household 
+\begin_inset Formula $i$
+\end_inset
+
+ decides 
 \end_layout
 
 \begin_layout Itemize
-9 regions: Census Divisions 
+Where to live,
+\end_layout
+
+\begin_layout Itemize
+How much to save, and
+\end_layout
+
+\begin_layout Itemize
+Whether to own or rent.
+\end_layout
+
+\begin_layout Standard
+These choices are subject to
+\end_layout
+
+\begin_layout Itemize
+Budget constraints, and
+\end_layout
+
+\begin_layout Itemize
+Beliefs about the future.
+\end_layout
+
+\begin_layout BeginFrame
+Decision Process
+\end_layout
+
+\begin_layout Standard
+In each period, household 
+\begin_inset Formula $i$
+\end_inset
+
+ decides 
+\end_layout
+
+\begin_layout Itemize
+Where to live: choose region 
 \begin_inset Formula $d\in D$
 \end_inset
 
-, each with house price 
+, with house price 
 \begin_inset Formula $p_{dt}$
 \end_inset
 
@@ -1634,47 +1780,74 @@ Model Outline I
 \end_layout
 
 \begin_layout Itemize
-Houses: choose whether to rent or own, 
-\begin_inset Formula $h_{t}\in\{0,1\}$
+How much to save: 
+\begin_inset Formula $a_{it+1}$
 \end_inset
 
-, fixed rate mortgage.
+, and
 \end_layout
 
 \begin_layout Itemize
-Savings: choose how much to save/borrow.
-\end_layout
+Whether to own or rent: 
+\begin_inset Formula $h_{it}\in\{0,1\}$
+\end_inset
 
-\begin_layout Itemize
-Migration: in each period, compare utilities across regions and choose location
- with highest utility.
-\end_layout
-
-\begin_layout BeginFrame
-Model Outline II
+.
 \end_layout
 
 \begin_layout Standard
-\begin_inset Note Note
-status open
-
-\begin_layout Plain Layout
-here are important observed and unobserved factors that affect behaviour
- in the model.
+These choices are subject to
 \end_layout
 
 \begin_layout Itemize
-F: as you can see, this is a very high dimensionla problem.
- the way I attack this is to assume that there are 2 aggregate factors
+Budget constraints, which are shaped by 
+\begin_inset Formula $\left(a_{it},z_{it},h_{it-1},q_{dt},p_{dt}\right)$
+\end_inset
+
+, and
 \end_layout
 
 \begin_layout Itemize
-I assume a model for people's beliefs about the evolution of those factors
- and how they relate to regional state variables.
+Beliefs about the future 
+\begin_inset Formula $\left(p_{dt+1},q_{dt+1},z_{it+1},s_{it+1}\right)$
+\end_inset
+
+.
 \end_layout
+
+\begin_layout BeginFrame
+Location Choice Problem
+\end_layout
+
+\begin_layout Itemize
+Defining value function 
+\emph on
+conditional
+\emph default
+ on moving to 
+\begin_inset Formula $d'$
+\end_inset
+
+, 
+\begin_inset Formula $v_{t}(x_{it},d')$
+\end_inset
+
+,
+\end_layout
+
+\begin_layout Standard
+\begin_inset Formula 
+\begin{eqnarray*}
+V_{t}\left(x_{it}\right) & = & \max_{d'\in D}\left\{ v_{t}\left(x_{it},d'\right)+\varepsilon_{id't}\right\} \\
+\varepsilon & \sim & \text{EV type 1, iid}
+\end{eqnarray*}
 
 \end_inset
 
+
+\end_layout
+
+\begin_layout Pause
 
 \end_layout
 
@@ -1691,7 +1864,38 @@ I assume a model for people's beliefs about the evolution of those factors
 \begin_inset Text
 
 \begin_layout Plain Layout
-State variable
+
+\family roman
+\series medium
+\shape up
+\size normal
+\emph off
+\bar no
+\strikeout off
+\uuline off
+\uwave off
+\noun off
+\color none
+\begin_inset Formula $x_{it}$
+\end_inset
+
+
+\family default
+\series default
+\shape default
+\size default
+\emph default
+\bar default
+\strikeout default
+\uuline default
+\uwave default
+\noun default
+\color inherit
+: State vector 
+\begin_inset Formula $ $
+\end_inset
+
+
 \end_layout
 
 \end_inset
@@ -1711,6 +1915,8 @@ Meaning
 \begin_inset Text
 
 \begin_layout Plain Layout
+
+\color red
 \begin_inset Formula $a_{it}$
 \end_inset
 
@@ -1723,6 +1929,8 @@ Meaning
 \begin_inset Text
 
 \begin_layout Plain Layout
+
+\color red
 financial assets
 \end_layout
 
@@ -1780,7 +1988,9 @@ household size: children present?
 \begin_inset Text
 
 \begin_layout Plain Layout
-\begin_inset Formula $\mathbf{F}_{t}$
+
+\color red
+\begin_inset Formula $p_{dt},q_{dt},\forall d$
 \end_inset
 
 
@@ -1792,7 +2002,9 @@ household size: children present?
 \begin_inset Text
 
 \begin_layout Plain Layout
-aggregate factors
+
+\color red
+regional prices
 \end_layout
 
 \end_inset
@@ -1803,6 +2015,8 @@ aggregate factors
 \begin_inset Text
 
 \begin_layout Plain Layout
+
+\color red
 \begin_inset Formula $h_{it-1}$
 \end_inset
 
@@ -1815,6 +2029,8 @@ aggregate factors
 \begin_inset Text
 
 \begin_layout Plain Layout
+
+\color red
 housing status when entering period
 \end_layout
 
@@ -1897,157 +2113,16 @@ age
 
 \end_layout
 
-\begin_layout Itemize
-State vector: 
-\begin_inset Formula 
-\[
-x_{it}=\left(a_{it},z_{it},s_{it},\mathbf{F}_{t},h_{it-1},d,\tau,t\right)
-\]
-
-\end_inset
-
-
-\end_layout
-
-\begin_layout Itemize
-Choice variables:
-\begin_inset Formula 
-\[
-\left(a_{it+1},h_{it},d'\in D\right)
-\]
-
-\end_inset
-
-
-\end_layout
-
 \begin_layout BeginFrame
-From national factors to regional prices: 
-\begin_inset Formula $\mathbf{F}\rightarrow\left[q_{dt},p_{dt}\right]$
-\end_inset
-
-
+Housing and Savings Problem
 \end_layout
 
 \begin_layout Itemize
-Aggregate factor 
-\begin_inset Formula $\mathbf{F}_{t}\equiv\left[Q_{t},P_{t}\right]$
-\end_inset
-
- follows a stationary VAR(1).
-\end_layout
-
-\begin_layout Itemize
-Regional state variables 
-\begin_inset Formula $q_{dt}$
-\end_inset
-
- and 
-\begin_inset Formula $p_{dt}$
-\end_inset
-
- are functions of 
-\begin_inset Formula $\mathbf{F}_{t}$
-\end_inset
-
-:
-\begin_inset Formula 
-\[
-\left[q_{dt},p_{dt}\right]=g_{d}\left(\mathbf{F}_{t}\right)
-\]
-
-\end_inset
-
-
-\end_layout
-
-\begin_layout Itemize
-Factor model 
-\begin_inset Formula $g_{d}$
-\end_inset
-
- implies that different regions are affected to different extent by aggregate
- shocks.
-\end_layout
-
-\begin_layout Itemize
-Parametric restriction which fits the data well.
- 
-\end_layout
-
-\begin_layout Itemize
-This allows for identification and reduces dimension to assist with tractability.
-\end_layout
-
-\begin_layout BeginFrame
-Choice Problem
-\end_layout
-
-\begin_layout Itemize
-Define value function 
-\emph on
-conditional
-\emph default
- on moving to 
-\begin_inset Formula $d'$
-\end_inset
-
-, 
-\begin_inset Formula $v_{t}(x_{it},d')$
-\end_inset
-
-, net of location taste shock 
-\begin_inset Formula $\varepsilon\sim$
-\end_inset
-
- EV type 1, iid.
-\end_layout
-
-\begin_layout Itemize
-\begin_inset ERT
-status open
-
-\begin_layout Plain Layout
-
-
-\backslash
-onslide+<2->
-\end_layout
-
-\end_inset
-
-The location choice solves:
-\end_layout
-
-\begin_layout Standard
-\begin_inset Formula 
-\begin{eqnarray*}
-V_{t}\left(x_{it}\right) & = & \max_{d'\in D}\left\{ v_{t}\left(x_{it},d'\right)+\varepsilon_{id't}\right\} 
-\end{eqnarray*}
-
-\end_inset
-
-
-\end_layout
-
-\begin_layout Itemize
-\begin_inset ERT
-status open
-
-\begin_layout Plain Layout
-
-
-\backslash
-onslide+<3->
-\end_layout
-
-\end_inset
-
 The housing and savings problem solves:
 \begin_inset Formula 
 \begin{eqnarray*}
 v_{t}\left(x_{it},d'\right) & = & \max_{c_{it}>0,h_{it}\in\left\{ 0,1\right\} }u(c_{it},h_{it},d_{it},d')\\
- & + & \beta\mathbb{E}_{z,s,\mathbf{F}}\left[\overline{v}_{t+1}\left(x_{it+1}\right)|z_{it},s_{it},\mathbf{F}_{t}\right]\\
+ & + & \beta\mathbb{E}_{z,s,\mathbf{q}_{t+1},\mathbf{p}_{t+1}}\left[\overline{v}_{t+1}\left(x_{it+1}\right)|z_{it},s_{it},\mathbf{q}_{t},\mathbf{p}_{t}\right]\\
 s.t. &  & \text{budget constraints}
 \end{eqnarray*}
 
@@ -2071,7 +2146,7 @@ s.t. &  & \text{budget constraints}
 \color none
 \begin_inset Formula 
 \[
-\overline{v}_{t}\left(x_{it}\right)=E_{\varepsilon}V_{t}\left(x_{it}\right)
+\overline{v}_{t+1}\left(x_{it+1}\right)=E_{\varepsilon}V_{t+1}\left(x_{it+1}\right)
 \]
 
 \end_inset
@@ -2080,7 +2155,11 @@ s.t. &  & \text{budget constraints}
 \end_layout
 
 \begin_layout BeginFrame
-Preferences
+Preferences: 
+\begin_inset Formula $u(c_{it},h_{it},d_{it},d')$
+\end_inset
+
+
 \end_layout
 
 \begin_layout Itemize
@@ -2106,7 +2185,7 @@ children present
 
 \begin_layout Itemize
 housing status 
-\begin_inset Formula $(h)$
+\begin_inset Formula $(h\in\{0,1\})$
 \end_inset
 
 , 
@@ -2672,19 +2751,16 @@ No fixed mortgage payment: implied schedule.
 \end_layout
 
 \begin_layout Itemize
-Owners can choose to sell, incurring proportional fixed cost 
-\begin_inset Formula $\phi$
-\end_inset
-
-:
+Continue as owners:
 \end_layout
 
 \begin_deeper
 \begin_layout Standard
 \begin_inset Formula 
 \begin{eqnarray*}
-a_{it+1} & = & (1+r)\left(a_{it}+y_{idt}-c_{it}+(1-\phi)p_{dt}-\kappa_{d}p_{dt}\right)\\
-a_{it+1} & \geq & 0
+a_{it+1} & = & (1+r(a_{it}))\left(a_{it}+y_{idt}-c_{it}\right)\\
+a_{it+1} & \geq & -(1-\chi)p_{dt}\\
+p_{T}h_{iT-1}+a_{iT} & \geq & 0
 \end{eqnarray*}
 
 \end_inset
@@ -2706,16 +2782,19 @@ onslide+<2->
 
 \end_inset
 
-Or they can choose to continue as owners:
+Owners can choose to sell, incurring proportional fixed cost 
+\begin_inset Formula $\phi$
+\end_inset
+
+:
 \end_layout
 
 \begin_deeper
 \begin_layout Standard
 \begin_inset Formula 
 \begin{eqnarray*}
-a_{it+1} & = & (1+r(a_{it}))\left(a_{it}+y_{idt}-c_{it}\right)\\
-a_{it+1} & \geq & -(1-\chi)p_{dt}\\
-p_{T}h_{iT-1}+a_{iT} & \geq & 0
+a_{it+1} & = & (1+r)\left(a_{it}+y_{idt}-c_{it}+(1-\phi)p_{dt}-\kappa_{d}p_{dt}\right)\\
+a_{it+1} & \geq & 0
 \end{eqnarray*}
 
 \end_inset
@@ -2866,7 +2945,7 @@ a_{it+1}=(1+r)\left(a_{it}+y_{idt}-c_{it}+(1-\phi)p_{dt}-p_{d't}\right)
 status open
 
 \begin_layout Section
-Solution and Estimation
+Estimation
 \end_layout
 
 \begin_layout BeginPlainFrame
@@ -2896,239 +2975,65 @@ vspace{1cm}
 \series bold
 \size largest
 \color blue
-Solution and Estimation
+Estimation
 \end_layout
 
 \begin_layout BeginFrame
-Solving the Model
+Identification
 \end_layout
 
 \begin_layout Itemize
-for each location 
-\begin_inset Formula $d=1,\dots,9$
-\end_inset
+I use observed variation in regional prices and productivity levels to identify
+ the model.
+\end_layout
 
-, 
+\begin_layout Itemize
+Identifying assumptions: 
 \end_layout
 
 \begin_deeper
-\begin_layout Itemize
-compute the value of moving to 
-\begin_inset Formula $d'=1,\dots,9$
-\end_inset
-
- 
+\begin_layout Enumerate
+Individual demand is not subject to aggregate shocks.
 \end_layout
 
-\begin_layout Itemize
-becoming either 
-\color blue
-owner
-\color inherit
- or 
-\color red
-renter
-\color inherit
- in 
-\begin_inset Formula $d'$
-\end_inset
-
-:
-\begin_inset Formula 
-\begin{eqnarray*}
-{\color{blue}v_{d}^{\text{own}}\left(x_{it},d'\right)} & = & \max_{c}u(c,{\color{blue}1},d,d')+\beta E\overline{v}\left(x_{it+1}\right)\\
-{\color{red}v_{d}^{\text{rent}}\left(x_{it},d'\right)} & = & \max_{c}u(c,{\color{red}0},d,d')+\beta E\overline{v}\left(x_{it+1}\right)
-\end{eqnarray*}
-
-\end_inset
-
-
+\begin_layout Enumerate
+Preferences are identical across regions (could be relaxed via regional
+ fixed effect).
 \end_layout
 
+\end_deeper
 \begin_layout Itemize
-\begin_inset ERT
-status open
-
-\begin_layout Plain Layout
-
-
-\backslash
-onslide+<2->
+Implications:
 \end_layout
 
+\begin_deeper
+\begin_layout Enumerate
+For estimation purposes, I can take 
+\begin_inset Formula $p_{dt},q_{dt}$
 \end_inset
 
-
-\series bold
-\color black
-unconditional value
-\series default
-\color inherit
- of moving from 
-\begin_inset Formula $d$
+ as exogenous to individual decisions: household 
+\begin_inset Formula $i$
 \end_inset
 
- to 
-\begin_inset Formula $d'$
+ responds to changes in 
+\begin_inset Formula $p_{dt},q_{dt}$
 \end_inset
 
+ across regions and time.
+\end_layout
 
-\series bold
-\color black
-
-\begin_inset Formula 
-\begin{eqnarray*}
-{\color{black}{\color{green}{\color{black}v_{d}\left(x_{it},d'\right)}}} & = & \max\left({\color{blue}v_{d}^{\text{own}}\left(x_{it},d'\right)},{\color{red}v_{d}^{\text{rent}}\left(x_{it},d'\right)}\right)
-\end{eqnarray*}
-
+\begin_layout Enumerate
+I implicitly assume that 
+\begin_inset Formula $p_{dt},q_{dt}$
 \end_inset
 
-
+ are shifted by supply shocks only.
 \end_layout
 
 \end_deeper
 \begin_layout BeginFrame
-Solving the Model
-\end_layout
-
-\begin_layout Standard
-\begin_inset Formula 
-\[
-\text{for all }d=1,\dots,9:\,\,\,\begin{cases}
-{\color{green}{\color{black}v_{d}\left(x_{it},1\right)}}=\max & \begin{cases}
-{\color{blue}v_{1}^{\text{own}}\left(x_{it},d'\right)}\\
-{\color{red}v_{1}^{\text{rent}}\left(x_{it},d'\right)}
-\end{cases}\\
-{\color{green}{\color{black}v_{d}\left(x_{it},2\right)}}=\max & \begin{cases}
-{\color{blue}v_{2}^{\text{own}}\left(x_{it},d'\right)}\\
-{\color{red}v_{2}^{\text{rent}}\left(x_{it},d'\right)}
-\end{cases}\\
-\vdots & \vdots\\
-{\color{green}{\color{black}v_{d}\left(x_{it},9\right)}}=\max & \begin{cases}
-{\color{blue}v_{9}^{\text{own}}\left(x_{it},d'\right)}\\
-{\color{red}v_{9}^{\text{rent}}\left(x_{it},d'\right)}
-\end{cases}
-\end{cases}
-\]
-
-\end_inset
-
-
-\end_layout
-
-\begin_layout Standard
-\begin_inset Formula 
-\[
-V\left(x_{it},\varepsilon\right)=\max_{d'\in D}\left\{ {\color{green}{\color{black}v\left(x_{it},d'\right)}}+\varepsilon_{id'}\right\} 
-\]
-
-\end_inset
-
-
-\end_layout
-
-\begin_layout Itemize
-\begin_inset ERT
-status open
-
-\begin_layout Plain Layout
-
-
-\backslash
-onslide+<2->
-\end_layout
-
-\end_inset
-
-there are 1,410,000 points in the state space 
-\begin_inset Formula $x$
-\end_inset
-
-
-\end_layout
-
-\begin_layout Itemize
-\begin_inset ERT
-status open
-
-\begin_layout Plain Layout
-
-
-\backslash
-onslide+<2->
-\end_layout
-
-\end_inset
-
-there are 18 optimization problems at point 
-\begin_inset Formula $x_{it}$
-\end_inset
-
-: Solving the model once requires solving 25,380,000 maximization problems.
-\end_layout
-
-\end_inset
-
-
-\end_layout
-
-\begin_layout BeginFrame
-Estimation Outline
-\end_layout
-
-\begin_layout Itemize
-Fix a subset of model parameters.
- 
-\end_layout
-
-\begin_layout Itemize
-Estimate stochastic processes outside structural model.
-\end_layout
-
-\begin_layout Itemize
-Match moments predicted by the structural model to moments in SIPP, using
- SMM.
-\end_layout
-
-\begin_layout Standard
-\begin_inset Branch 25min
-status open
-
-\begin_layout Itemize
-Moments relating to mobility: mobility rates conditional on 
-\begin_inset Formula $s,h,t$
-\end_inset
-
-, number of moves
-\end_layout
-
-\begin_layout Itemize
-Moments relating to homeownership: ownership rates conditional on 
-\begin_inset Formula $s,d,t$
-\end_inset
-
-
-\end_layout
-
-\begin_layout Itemize
-Average wealth conditional on 
-\begin_inset Formula $d,t$
-\end_inset
-
-
-\end_layout
-
-\end_inset
-
-
-\end_layout
-
-\begin_layout Standard
-\begin_inset Branch 90mins
-status open
-
-\begin_layout BeginFrame
-Data: SIPP
+Data: Micro (SIPP) and Macro (BEA, FHFA)
 \end_layout
 
 \begin_layout Itemize
@@ -3170,6 +3075,231 @@ FHFA for regional house price indeces.
 \end_layout
 
 \end_deeper
+\end_inset
+
+
+\end_layout
+
+\begin_layout BeginFrame
+Estimation Outline
+\end_layout
+
+\begin_layout Standard
+Estimation proceeds in two steps:
+\end_layout
+
+\begin_layout Enumerate
+Estimate a model of household beliefs: 
+\end_layout
+
+\begin_deeper
+\begin_layout Itemize
+An unrestricted model suffers from the curse of dimensionality: 20-dimensional
+ integration problem.
+\end_layout
+
+\begin_layout Itemize
+I will impose more structure on expectations.
+\end_layout
+
+\end_deeper
+\begin_layout Enumerate
+Estimate the decision model:
+\end_layout
+
+\begin_deeper
+\begin_layout Itemize
+I will fix some parameters, and
+\end_layout
+
+\begin_layout Itemize
+Estimate the remaining behavioural parameters with SMM.
+\end_layout
+
+\end_deeper
+\begin_layout BeginFrame
+The Curse of Dimensionality: Regional Prices.
+\end_layout
+
+\begin_layout Itemize
+If 
+\begin_inset Formula $q_{dt}$
+\end_inset
+
+ and 
+\begin_inset Formula $p_{dt}$
+\end_inset
+
+ are unrestricted Markovian processes, computing the expectation of 
+\begin_inset Formula $\overline{v}(x)$
+\end_inset
+
+ is a 20-dimensional integration problem (integrate over 
+\begin_inset Formula $z,s,\mathbf{q},\mathbf{p}$
+\end_inset
+
+).
+\end_layout
+
+\begin_layout Itemize
+Assuming 3 points for each grid 
+\begin_inset Formula $q_{d}$
+\end_inset
+
+ and 
+\begin_inset Formula $p_{d}$
+\end_inset
+
+, this implies 
+\begin_inset Formula $3^{18}$
+\end_inset
+
+ points for 
+\begin_inset Formula $\mathbf{q},\mathbf{p}$
+\end_inset
+
+ alone.
+\end_layout
+
+\begin_layout Itemize
+If there are 
+\begin_inset Formula $N$
+\end_inset
+
+ other states, we have 
+\begin_inset Formula $N\times3^{18}$
+\end_inset
+
+ points in the state space
+\end_layout
+
+\begin_layout Itemize
+In current version of the model, 
+\begin_inset Formula $N=156.672$
+\end_inset
+
+, thus we would have
+\end_layout
+
+\begin_deeper
+\begin_layout Standard
+\begin_inset Formula 
+\[
+60.697.942.852.608
+\]
+
+\end_inset
+
+points to compute one solution.
+ This is currently infeasible.
+\end_layout
+
+\end_deeper
+\begin_layout BeginFrame
+Step 1: Factor Model of Aggregate and Regional Prices 
+\end_layout
+
+\begin_layout Itemize
+I assume that beliefs follow a 2-dimensional factor model.
+\end_layout
+
+\begin_layout Itemize
+An aggregate factor 
+\begin_inset Formula $\mathbf{F}_{t}\equiv\left[Q_{t},P_{t}\right]$
+\end_inset
+
+ follows a stationary VAR(1).
+\end_layout
+
+\begin_layout Itemize
+Regional state variables 
+\begin_inset Formula $q_{dt}$
+\end_inset
+
+ and 
+\begin_inset Formula $p_{dt}$
+\end_inset
+
+ are functions of 
+\begin_inset Formula $\mathbf{F}_{t}$
+\end_inset
+
+:
+\begin_inset Formula 
+\[
+\left[q_{dt},p_{dt}\right]=g_{d}\left(\mathbf{F}_{t}\right)
+\]
+
+\end_inset
+
+
+\end_layout
+
+\begin_layout Itemize
+Factor model 
+\begin_inset Formula $g_{d}$
+\end_inset
+
+ implies that 
+\end_layout
+
+\begin_deeper
+\begin_layout Itemize
+different regions are affected to different extent by aggregate shocks.
+\end_layout
+
+\begin_layout Itemize
+given a value 
+\begin_inset Formula $\mathbf{F_{t}}$
+\end_inset
+
+, expected growth rates differ by region.
+ 
+\end_layout
+
+\end_deeper
+\begin_layout Itemize
+Parametric restriction which fits the data well.
+ 
+\end_layout
+
+\begin_layout Standard
+\begin_inset Branch 25min
+status open
+
+\begin_layout Itemize
+Moments relating to mobility: mobility rates conditional on 
+\begin_inset Formula $s,h,t$
+\end_inset
+
+, number of moves
+\end_layout
+
+\begin_layout Itemize
+Moments relating to homeownership: ownership rates conditional on 
+\begin_inset Formula $s,d,t$
+\end_inset
+
+
+\end_layout
+
+\begin_layout Itemize
+Average wealth conditional on 
+\begin_inset Formula $d,t$
+\end_inset
+
+
+\end_layout
+
+\end_inset
+
+
+\end_layout
+
+\begin_layout Standard
+\begin_inset Branch 90mins
+status open
+
 \begin_layout BeginPlainFrame
 
 \end_layout
@@ -3220,7 +3350,7 @@ shows that processes are correlated across regions, but not perfectly
 \end_layout
 
 \begin_layout BeginFrame
-Preset Parameters
+Step 2: Preset Parameters
 \end_layout
 
 \begin_layout Standard
@@ -3275,7 +3405,7 @@ Dropbox/model/fit/preset.tex}
 \end_layout
 
 \begin_layout BeginFrame
-Identification
+Step 2: Key Moment Relationships
 \end_layout
 
 \begin_layout Standard
@@ -3614,7 +3744,7 @@ status open
 \end_layout
 
 \begin_layout BeginFrame
-Estimation method
+Step 2: Estimation method
 \end_layout
 
 \begin_layout Itemize
@@ -3681,12 +3811,16 @@ Optimization is done with a parallel derivative free method.
 \end_layout
 
 \begin_layout Itemize
-Standard errors are computed using simulation methods (Chernozhukov and
- Hong, 2003).
+Standard errors are computed using simulation methods (requires adjustment
+ of Chernozhukov and Hong (2003) for non-optimal 
+\begin_inset Formula $W_{n}$
+\end_inset
+
+).
 \end_layout
 
 \begin_layout BeginFrame
-Moments
+Step 2: Full List of Moments
 \end_layout
 
 \begin_layout Itemize
@@ -3703,7 +3837,7 @@ Moments relating to mobility:
 \end_inset
 
 , 
-\begin_inset Formula $E[\text{move}|s]$
+\begin_inset Formula $E[\text{move}|\text{kids}]$
 \end_inset
 
 , 
@@ -3711,7 +3845,7 @@ Moments relating to mobility:
 \end_inset
 
 , 
-\begin_inset Formula $Cov(\text{move},s)$
+\begin_inset Formula $Cov(\text{move},\text{kids})$
 \end_inset
 
 , 
@@ -3760,7 +3894,7 @@ Moments relating to homeownership:
 \end_inset
 
 , 
-\begin_inset Formula $E[h|s]$
+\begin_inset Formula $E[h|\text{kids}]$
 \end_inset
 
 , 
@@ -3768,7 +3902,7 @@ Moments relating to homeownership:
 \end_inset
 
 , 
-\begin_inset Formula $Cov(h,s)$
+\begin_inset Formula $Cov(h,\text{kids})$
 \end_inset
 
 
@@ -3943,7 +4077,7 @@ it is possible to estimate the moving cost for an actual mover.
 status open
 
 \begin_layout BeginFrame
-Model Fit II
+Model Fit 
 \end_layout
 
 \begin_layout Standard
@@ -4057,124 +4191,18 @@ age > 35
 \end_layout
 
 \begin_layout Standard
-\noindent
-\align center
-\begin_inset Graphics
-	filename /Users/florianoswald/Dropbox/mobility/output/model/fit/fit_auxmods.pdf
-	scale 60
-
-\end_inset
-
-
-\end_layout
-
-\begin_layout BeginFrame
-Model Fit II
-\end_layout
-
-\begin_layout Standard
-\begin_inset Note Note
-status collapsed
-
-\begin_layout Plain Layout
-\begin_inset Tabular
-<lyxtabular version="3" rows="3" columns="3">
-<features tabularvalignment="middle">
-<column alignment="center" valignment="top" width="0">
-<column alignment="center" valignment="top" width="0">
-<column alignment="center" valignment="top" width="0">
-<row>
-<cell alignment="center" valignment="top" topline="true" bottomline="true" leftline="true" usebox="none">
-\begin_inset Text
+\begin_inset ERT
+status open
 
 \begin_layout Plain Layout
 
-\end_layout
 
-\end_inset
-</cell>
-<cell alignment="center" valignment="top" topline="true" bottomline="true" leftline="true" usebox="none">
-\begin_inset Text
-
-\begin_layout Plain Layout
-model
-\end_layout
-
-\end_inset
-</cell>
-<cell alignment="center" valignment="top" topline="true" bottomline="true" leftline="true" rightline="true" usebox="none">
-\begin_inset Text
-
-\begin_layout Plain Layout
-data
-\end_layout
-
-\end_inset
-</cell>
-</row>
-<row>
-<cell alignment="center" valignment="top" topline="true" leftline="true" usebox="none">
-\begin_inset Text
-
-\begin_layout Plain Layout
-age < 35
-\end_layout
-
-\end_inset
-</cell>
-<cell alignment="center" valignment="top" topline="true" leftline="true" usebox="none">
-\begin_inset Text
-
-\begin_layout Plain Layout
-31%
-\end_layout
-
-\end_inset
-</cell>
-<cell alignment="center" valignment="top" topline="true" leftline="true" rightline="true" usebox="none">
-\begin_inset Text
-
-\begin_layout Plain Layout
-44%
-\end_layout
-
-\end_inset
-</cell>
-</row>
-<row>
-<cell alignment="center" valignment="top" topline="true" bottomline="true" leftline="true" usebox="none">
-\begin_inset Text
-
-\begin_layout Plain Layout
-age > 35
-\end_layout
-
-\end_inset
-</cell>
-<cell alignment="center" valignment="top" topline="true" bottomline="true" leftline="true" usebox="none">
-\begin_inset Text
-
-\begin_layout Plain Layout
-84%
-\end_layout
-
-\end_inset
-</cell>
-<cell alignment="center" valignment="top" topline="true" bottomline="true" leftline="true" rightline="true" usebox="none">
-\begin_inset Text
-
-\begin_layout Plain Layout
-71%
-\end_layout
-
-\end_inset
-</cell>
-</row>
-</lyxtabular>
-
-\end_inset
-
-
+\backslash
+hspace*{-2pt}
+\backslash
+makebox[
+\backslash
+linewidth][c]{%
 \end_layout
 
 \end_inset
@@ -4184,26 +4212,30 @@ age > 35
 
 \begin_layout Standard
 \noindent
-\align center
 \begin_inset Graphics
 	filename /Users/florianoswald/Dropbox/mobility/output/model/fit/fit_auxmods2.pdf
-	scale 60
+	scale 50
+
+\end_inset
+
+
+\begin_inset Graphics
+	filename /Users/florianoswald/Dropbox/mobility/output/model/fit/fit_wealth.pdf
+	scale 50
 
 \end_inset
 
 
 \end_layout
 
-\begin_layout BeginFrame
-Model Validation
-\end_layout
-
 \begin_layout Standard
-\noindent
-\align center
-\begin_inset Graphics
-	filename /Users/florianoswald/Dropbox/mobility/output/model/fit/fit_wealth.pdf
-	scale 60
+\begin_inset ERT
+status open
+
+\begin_layout Plain Layout
+
+}
+\end_layout
 
 \end_inset
 
@@ -5417,10 +5449,6 @@ Dropbox/model/experiments/MortgageSubsidy/mortgage_change_mv.tex}
 Conclusion
 \end_layout
 
-\begin_layout Standard
-\begin_inset Branch 25min
-status open
-
 \begin_layout BeginFrame
 Conclusion
 \end_layout
@@ -5431,81 +5459,37 @@ Constructed a model of migration over the lifecycle capable of dealing with
 \end_layout
 
 \begin_layout Itemize
-Found that:
-\end_layout
-
-\begin_deeper
-\begin_layout Enumerate
 The migration option has a large value.
 \end_layout
 
-\begin_layout Enumerate
+\begin_layout Itemize
 Homeownership: important.
 \end_layout
 
 \begin_deeper
-\begin_layout Enumerate
-affects probability of moving.
-\end_layout
-
-\begin_layout Enumerate
-affects response to shocks.
-\end_layout
-
-\end_deeper
-\end_deeper
-\end_inset
-
-
-\end_layout
-
-\begin_layout Standard
-\begin_inset Branch 90mins
-status open
-
-\begin_layout BeginFrame
-Conclusion
+\begin_layout Itemize
+Affects probability of moving.
 \end_layout
 
 \begin_layout Itemize
-Constructed a dynamic migration model capable of dealing with aggregate
- shocks.
+Affects response to shocks.
+\end_layout
+
+\end_deeper
+\begin_layout Itemize
+Abolishing the mortgage interest deduction:
+\end_layout
+
+\begin_deeper
+\begin_layout Itemize
+Has a negligible impact on migration.
 \end_layout
 
 \begin_layout Itemize
-Found that:
-\end_layout
-
-\begin_deeper
-\begin_layout Enumerate
-The migration option has a large value.
-\end_layout
-
-\begin_layout Enumerate
-Homeownership: important.
-\end_layout
-
-\begin_deeper
-\begin_layout Enumerate
-affects probability of moving.
-\end_layout
-
-\begin_layout Enumerate
-affects response to shocks.
+But large welfare impacts.
 \end_layout
 
 \end_deeper
-\begin_layout Enumerate
-Abolishing the mortgage interest deduction has a small positive impact on
- migration and a large welfare impact.
-\end_layout
-
-\end_deeper
-\end_inset
-
-
-\end_layout
-
 \begin_layout BeginFrame
 To do
 \end_layout
@@ -5555,6 +5539,174 @@ vspace{1cm}
 \size largest
 \color blue
 Appendix
+\end_layout
+
+\begin_layout BeginFrame
+Solving the Model
+\end_layout
+
+\begin_layout Itemize
+for each location 
+\begin_inset Formula $d=1,\dots,9$
+\end_inset
+
+, 
+\end_layout
+
+\begin_deeper
+\begin_layout Itemize
+compute the value of moving to 
+\begin_inset Formula $d'=1,\dots,9$
+\end_inset
+
+ 
+\end_layout
+
+\begin_layout Itemize
+becoming either 
+\color blue
+owner
+\color inherit
+ or 
+\color red
+renter
+\color inherit
+ in 
+\begin_inset Formula $d'$
+\end_inset
+
+:
+\begin_inset Formula 
+\begin{eqnarray*}
+{\color{blue}v_{d}^{\text{own}}\left(x_{it},d'\right)} & = & \max_{c}u(c,{\color{blue}1},d,d')+\beta E\overline{v}\left(x_{it+1}\right)\\
+{\color{red}v_{d}^{\text{rent}}\left(x_{it},d'\right)} & = & \max_{c}u(c,{\color{red}0},d,d')+\beta E\overline{v}\left(x_{it+1}\right)
+\end{eqnarray*}
+
+\end_inset
+
+
+\end_layout
+
+\begin_layout Itemize
+\begin_inset ERT
+status open
+
+\begin_layout Plain Layout
+
+
+\backslash
+onslide+<2->
+\end_layout
+
+\end_inset
+
+
+\series bold
+\color black
+unconditional value
+\series default
+\color inherit
+ of moving from 
+\begin_inset Formula $d$
+\end_inset
+
+ to 
+\begin_inset Formula $d'$
+\end_inset
+
+
+\series bold
+\color black
+
+\begin_inset Formula 
+\begin{eqnarray*}
+{\color{black}{\color{green}{\color{black}v_{d}\left(x_{it},d'\right)}}} & = & \max\left({\color{blue}v_{d}^{\text{own}}\left(x_{it},d'\right)},{\color{red}v_{d}^{\text{rent}}\left(x_{it},d'\right)}\right)
+\end{eqnarray*}
+
+\end_inset
+
+
+\end_layout
+
+\end_deeper
+\begin_layout BeginFrame
+Solving the Model
+\end_layout
+
+\begin_layout Standard
+\begin_inset Formula 
+\[
+\text{for all }d=1,\dots,9:\,\,\,\begin{cases}
+{\color{green}{\color{black}v_{d}\left(x_{it},1\right)}}=\max & \begin{cases}
+{\color{blue}v_{1}^{\text{own}}\left(x_{it},d'\right)}\\
+{\color{red}v_{1}^{\text{rent}}\left(x_{it},d'\right)}
+\end{cases}\\
+{\color{green}{\color{black}v_{d}\left(x_{it},2\right)}}=\max & \begin{cases}
+{\color{blue}v_{2}^{\text{own}}\left(x_{it},d'\right)}\\
+{\color{red}v_{2}^{\text{rent}}\left(x_{it},d'\right)}
+\end{cases}\\
+\vdots & \vdots\\
+{\color{green}{\color{black}v_{d}\left(x_{it},9\right)}}=\max & \begin{cases}
+{\color{blue}v_{9}^{\text{own}}\left(x_{it},d'\right)}\\
+{\color{red}v_{9}^{\text{rent}}\left(x_{it},d'\right)}
+\end{cases}
+\end{cases}
+\]
+
+\end_inset
+
+
+\end_layout
+
+\begin_layout Standard
+\begin_inset Formula 
+\[
+V\left(x_{it},\varepsilon\right)=\max_{d'\in D}\left\{ {\color{green}{\color{black}v\left(x_{it},d'\right)}}+\varepsilon_{id'}\right\} 
+\]
+
+\end_inset
+
+
+\end_layout
+
+\begin_layout Itemize
+\begin_inset ERT
+status open
+
+\begin_layout Plain Layout
+
+
+\backslash
+onslide+<2->
+\end_layout
+
+\end_inset
+
+there are 1,410,000 points in the state space 
+\begin_inset Formula $x$
+\end_inset
+
+
+\end_layout
+
+\begin_layout Itemize
+\begin_inset ERT
+status open
+
+\begin_layout Plain Layout
+
+
+\backslash
+onslide+<2->
+\end_layout
+
+\end_inset
+
+there are 18 optimization problems at point 
+\begin_inset Formula $x_{it}$
+\end_inset
+
+: Solving the model once requires solving 25,380,000 maximization problems.
 \end_layout
 
 \begin_layout BeginPlainFrame
